--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.xx - 2015/01/xx
+
+  Miscellaneous:
+
+  - A rudimentary Vim plugin has been added to the repository.
+
 v1.22.1.beta.1 - 2014/12/17
 
   Bug fixes:
