Dump open4 gem and force the pipes in ExternalProgram.popen to use UTF-8.

--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@ v1.24.0 - 2015/01/xx
   Miscellaneous:
 
   - I/O now uses UTF-8 for encoding.
+  - No longer uses the open4 gem.
 
 v1.23.0 - 2015/01/02
 
