--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.24.1.beta.3 - 2015/04/xx
+
+  Miscellaneous:
+
+  - Display file names instead of "<unpublished>" for unnamed packages.
+
 v1.24.1.beta.2 - 2015/04/24
 
   Bug fix:
