--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 v1.24.1.beta.3 - 2015/04/xx
 
+  Bug fix:
+
+  - Fixed potential package version data collapsing in --yaml and --json
+    output.
+
   Miscellaneous:
 
   - Display file names instead of "<unpublished>" for unnamed packages.
