--- a/Changes
+++ b/Changes
@@ -7,6 +7,10 @@ v1.24.1.beta.3 - 2015/04/xx
 
   Miscellaneous:
 
+  - Fig now refuses to use the --list-all-configs option with --graphviz,
+    --yaml, and --json options.  The results were non-sensical in the face of
+    overrides and other conflicts between peer base configs.
+
   - Display file names instead of "<unpublished>" for unnamed packages.
 
 v1.24.1.beta.2 - 2015/04/24
