--- a/Changes
+++ b/Changes
@@ -1,9 +1,12 @@
 v1.24.1.beta.3 - 2015/04/xx
 
-  Bug fix:
+  Bug fixes:
 
   - Fixed potential package version data collapsing in --yaml and --json
     output.
+
+  - The --list-dependencies and --list-variables options now work with packages
+    brought in via an include-file statement.
 
   Miscellaneous:
 
