--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+v1.25.1.beta.1 - 2015/xx/xx
+
+  Miscellaneous:
+
+  - As previously announced, Fig now requires Ruby 2.0.0.
+
 v1.25.0 - 2015/05/11
 
   Announcement:
