--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-v1.25.1.beta.1 - 2015/6/3
+v1.26.0 - 2015/6/22
 
   Bug fixes:
 
@@ -15,6 +15,10 @@ v1.25.1.beta.1 - 2015/6/3
   - Now looks for ./.fig on startup and complains if it exists and it isn't a
     directory in order to prevent problems with naughty users running from
     within a repository.
+
+v1.25.1.beta.1 - 2015/6/3
+
+  - Test release.
 
 v1.25.0 - 2015/5/11
 
