--- a/Changes
+++ b/Changes
@@ -1,9 +1,13 @@
-v1.26.1.beta.1 - 2015/6/25
+v1.27.0 - 2015/7/9
 
   Bug fixes:
 
   - Fix handling of assets when publishing locally and FIG_REMOTE_URL is unset.
     Thanks to Shafeeq Shariff for finding this.
+
+v1.26.1.beta.1 - 2015/6/25
+
+ - Test release.
 
 v1.26.0 - 2015/6/22
 
