Include O/S in publishing metadata.

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ v1.27.2 - 2016/x/x
 
   Miscellaneous:
 
-  - 
+  - Include publishing operating system in package metadata.
 
 v1.27.1 - 2016/7/19
 
