Log when a retrieval removes a symlink or overwrites a file.
Logging happens at the INFO level so that anyone running with
«--log-level warn» will still not see the messages.

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-v1.27.2 - 2016/x/x
+v1.27.2 - 2016/10/20
 
   Miscellaneous:
 
+  - Log when a retrieval is removing a symlink or overwriting a file.
   - Include publishing operating system in package metadata.
 
 v1.27.1 - 2016/7/19
